--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "@xia/dform",
+  "name": "@xia/xform",
   "version": "0.0.2",
   "scripts": {
     "start": "dumi dev",
